[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "super_eureka"
version = "0.0.1"
authors = [
    { name = "Wesley Barros", email = "wesleybarros950@gmail.com" }
]
description = "A logging library without hassle."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

[project.urls]
"Homepage" = "https://github.com/wesley950/super-eureka"
"Bug Tracker" = "https://github.com/wesley950/super-eureka/issues"